<resources>
    <string name="app_name">NotePic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toolbox">Toolbox</string>
    <string name="undo">Undo</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="palette">Palette</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="xlrg">X-Large</string>
    <string name="paint">Paint Colour</string>
</resources>
