<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/action_toolbox"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_brush"
        android:title="@string/toolbox"/>

    <item
        android:id="@+id/action_palette"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_brush"
        android:title="@string/palette"/>

    <item
        android:id="@+id/action_camera"
        android:orderInCategory="80"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_camera"
        android:title="@string/camera"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_save"
        android:title="@string/save"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="60"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_refresh"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="70"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_undo"
        android:title="@string/undo"/>



</menu>
